# src/modules/documents/data-contracts/upload-document-response.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { BaseResponse } from '../../../shared/data-contracts/base-response';
+import { DocumentSummary } from './document-summary';
+
+export class UploadDocumentResponse extends BaseResponse<DocumentSummary> {
+  @ApiProperty({ type: DocumentSummary })
+  declare data?: DocumentSummary;
+}
